--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
   <a href="pages/les_types_d_avions.html">les types d'avions</a>
 </header>
 
-  <div style="background-image: url(images/nuages.jpg);">
- 
-  
-   <div class="a">
-     <h1>la création</h1>
-     
-    </div>
-   <center>
-    <img src=images/avion.jpg />
-   </center>
-   <p>Le première avion est crée en 1890 par Clément Ader batisé l'Eole.<br>mais celui-ci ne vola pas à plus
-   de 20 cm du sol sur une distance de 50 mêtres.</p>
+  <center>
+     <h2>L'histoire de l'aviation</h2>
+      <img src=image/Havion.jpg usemap="#h" /> 
+      <map name="h">
+          <area shape="rect"
+          coords="0,416,600,0"
+          href="pages/histoire_de_l_aviation.html">
+      </map>
+     <h3>La fabrication des avions</h3>
+      <img src=image/Favion.jpg usemap="#f"/>
+      <map name="f">
+          <area shape="rect"
+          coords="0,597,894,0"
+          href="pages/la_fabrication_d_avions.html">
+      </map>
    
   
  </body>
